--- a/doc/style.css
+++ b/doc/style.css
@@ -7,7 +7,7 @@ body {
   margin-right: auto;
   padding: 1em;
   max-width: 60em;
-  font-family: "DejaVu Sans", Verdana, Helvetica, Arial, sans-serif;
+  font-family: "SF Pro Text", Verdana, "DejaVu Sans", sans-serif;
   text-rendering: optimizeLegibility;
 }
 
@@ -198,19 +198,15 @@ a.qindexHL {
 
 code {
   color: #444;
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
 }
 
 dl.el {
   margin-left: -1cm;
 }
 
-a.el {
-  font-family: "DejaVu Sans Mono", monospace, fixed;
-}
-
 .fragment {
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
 }
 
 pre.fragment {
@@ -235,6 +231,14 @@ div.groupHeader {
   margin-top: 12px;
   margin-bottom: 6px;
   font-weight: 700;
+}
+
+h2.groupheader {
+  line-height: 1.18em;
+  font-size: 1em;
+  font-weight: 600;
+  font-family: Helvetica, Arial, "DejaVu Sans Condensed", Verdana, sans-serif;
+  margin: 1.25em 0 0.5em 0;
 }
 
 a + h2.groupheader {
@@ -274,7 +278,7 @@ td.indexvalue {
 }
 
 table.memname {
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
   border-spacing: 0;
 }
 
@@ -391,6 +395,18 @@ table.memberdecls {
   line-height: 1.3em;
 }
 
+table.memberdecls h3 {
+  line-height: 1.18em;
+  font-size: 1em;
+  font-weight: 600;
+  font-family: Helvetica, Arial, "DejaVu Sans Condensed", Verdana, sans-serif;
+  margin: 1.25em 0 0.5em 0;
+}
+
+tr.inherit_header td {
+  padding: 1em 0 0.5em 0;
+}
+
 .mdescLeft,.mdescRight,.memItemLeft,.memItemRight,.memTemplItemLeft,.memTemplItemRight,.memTemplParams {
   margin: 0;
   padding: 0;
@@ -402,7 +418,7 @@ table.memberdecls {
 
 .memItemLeft,.memItemRight,.memTemplParams {
   border: 0;
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
 }
 
 .memItemLeft,.memTemplItemLeft {
@@ -423,20 +439,35 @@ td.memSeparator {
   display: none;
 }
 
+td.mlabels-left {
+  margin-left: 0;
+  padding-left: 0;
+}
+
 td.mlabels-right {
-  vertical-align: top;
-  padding-top: 4px;
   color: #B4C342;
+  font-weight: normal;
+  margin-left: 1em;
+  vertical-align: bottom;
 }
 
 .memtitle {
+  border-bottom: 1px solid #EEE;
+  font-family: Helvetica, Arial, "DejaVu Sans Condensed", Verdana, sans-serif;
+  font-size: 1.18em;
+  font-weight: 600;
+  line-height: 1.41em;
+  margin: 1.5em 0 0 0;
+}
+
+.permalink {
   display: none;
 }
 
 .memtemplate {
   color: #888;
   font-style: italic;
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
   font-size: small;
 }
 
@@ -450,18 +481,20 @@ td.mlabels-right {
 }
 
 .memitem {
-  padding: 0.5em 0.5em 0.25em 0.5em;
-  margin: 1em 0 2em 0;
+  padding: 0;
+  margin: 0 0 3em 0;
 }
 
 .memproto {
   border-bottom: 1px solid #EEE;
-  font-family: "DejaVu Sans Mono", monospace, fixed;
-  font-size: 1.09em;
-  font-weight: 600;
-  line-height: 1.41em;
-  margin-bottom: 0.25em;
-  padding-bottom: 0.125em;
+  border-left: 1px solid #EEE;
+  color: #444;
+  float: right;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
+  font-size: small;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  padding: 0.25em 0 0.25em 0.25em;
 }
 
 .memproto .paramname {
@@ -469,14 +502,32 @@ td.mlabels-right {
   padding-right: 0.25em;
 }
 
+.mlabels {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .memdoc {
   padding: 0;
 }
 
-.memdoc > p:first-child {
+.memdoc > p:first-child, .memdoc .textblock > p:first-child {
   font-style: italic;
   color: #444;
   margin-bottom: 0.75em;
+  margin-top: 0;
+  padding-top: 0.25em;
+  font-weight: normal;
+}
+
+.memdoc > p:first-child, .memdoc .textblock > h3:first-child {
+  color: #444;
+  margin-bottom: 0.75em;
+  margin-top: 0;
+  padding-top: 0.25em;
+  font-weight: normal;
+  color: #444;
+  font-size: 0.9em;
 }
 
 .paramkey {
@@ -492,7 +543,7 @@ td.mlabels-right {
 .params .paramname {
   color: #111;
   white-space: nowrap;
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
   font-style: italic;
   padding-right: 0.5em;
   vertical-align: top;
@@ -503,7 +554,7 @@ td.mlabels-right {
 }
 
 .fieldtable {
-  margin-top: 0.5em;
+  margin-top: 1em;
   border-collapse: collapse;
 }
 
@@ -513,11 +564,11 @@ td.mlabels-right {
 
 td.fieldname {
   vertical-align: top;
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
 }
 
 td.fielddoc {
-  padding: 0.125em 0.5em 0 0.25em;
+  padding: 0.125em 0.5em 0 0.5em;
   vertical-align: top;
 }
 
@@ -530,7 +581,7 @@ td.fieldtype {
   color: #666;
   padding: 0 0.5em 0 0;
   vertical-align: top;
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
 }
 
 td.fielddoc p {
@@ -580,7 +631,6 @@ td.entry {
   font-family: "DejaVu Sans", Verdana, Helvetica, Arial, sans-serif;
   font-weight: 400;
   padding-right: 1em;
-  vertical-align: top;
 }
 
 .arrow {
@@ -591,6 +641,7 @@ td.entry {
   width: 16px;
   height: 22px;
   vertical-align: top;
+  visibility: hidden;
 }
 
 td.entry b {
@@ -732,7 +783,7 @@ div.summary a {
 }
 
 div.line {
-  font-family: "DejaVu Sans Mono", monospace, fixed;
+  font-family: "SF Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace, fixed;
   line-height: 1.4em;
   white-space: pre-wrap;
 }
